--- a/Project-API/FoodDelivery.ProjectAPI.csproj
+++ b/Project-API/FoodDelivery.ProjectAPI.csproj
@@ -26,6 +26,7 @@
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00285" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
+    <PackageReference Include="Serilog.Sinks.Map" Version="1.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
