--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,6 @@ dotnet_diagnostic.CS8604.severity = silent
 
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8618.severity = silent
+
+# CS8602: Dereference of a possibly null reference.
+dotnet_diagnostic.CS8602.severity = silent
