Added new connection string using Microsoft Identity

--- a/Project-API/appsettings.json
+++ b/Project-API/appsettings.json
@@ -20,6 +20,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Api-Project": "server=DVT-CHANGEME;database=Devoteam-project;Trusted_Connection=true"
+    //"Api-Project": "server=DVT-CHANGEME;database=Devoteam-project;Trusted_Connection=true"
+    "Api-Project": "Server=tcp:dominik-lichota-server.database.windows.net;Authentication=Active Directory Default; Database=devoteam-project;"
+
   }
 }
