--- a/Project-API/FoodDelivery.ProjectAPI.csproj
+++ b/Project-API/FoodDelivery.ProjectAPI.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <PackageReference Include="Automapper" Version="12.0.0" />
     <PackageReference Include="Automapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.7.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
       <PrivateAssets>all</PrivateAssets>
