--- a/Project-API/appsettings.json
+++ b/Project-API/appsettings.json
@@ -18,10 +18,20 @@
       }
     ]
   },
+  "WriteTo": [
+    {
+      "Name": "ApplicationInsights",
+      "Args": {
+        "connectionString": "InstrumentationKey=26282d66-0f39-417a-8b25-6a0d57935286;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/",
+        "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+      }
+    }
+  ],
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"Api-Project": "server=DVT-CHANGEME;database=Devoteam-project;Trusted_Connection=true"
     "Api-Project": "Server=tcp:dominik-lichota-server.database.windows.net;Authentication=Active Directory Default; Database=devoteam-project;"
-
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=26282d66-0f39-417a-8b25-6a0d57935286;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
   }
 }
